chore: Preventinh the component from braking on smaller screens

--- a/src/components/Layout/Hero/style.module.css
+++ b/src/components/Layout/Hero/style.module.css
@@ -42,4 +42,5 @@
   letter-spacing: 0.05rem;
   font-size: 1.25rem;
   opacity: 0.8;
+  text-align: center;
 }
