--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -8,6 +8,7 @@
   gap: var(--gap);
   justify-content: space-between;
   margin-bottom: 32px;
+  height: 100%;
 }
 
 @media (min-width: 1100px){
